force-app/main/default/objects/d4c_NIPR_Sync_Settings__mdt/d4c_NIPR_Sync_Settings__mdt.object-meta.xml
<CustomObject>
    <label>NIPR Sync Settings</label>
    <pluralLabel>NIPR Sync Settings</pluralLabel>
</CustomObject>