force-app/main/default/objects/d4c_NIPR_Sync_Settings__mdt/fields/d4c_EnableDebugging__c.field-meta.xml
<CustomField>
    <fullName>d4c_EnableDebugging__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enable system debug logging for NIPR integration</description>
    <label>Enable Debugging</label>
    <type>Checkbox</type>
</CustomField>