force-app/main/default/objects/d4c_NIPR_Sync_Settings__mdt/fields/d4c_MaxNPNCountPerSubscription__c.field-meta.xml
<CustomField>
    <fullName>d4c_MaxNPNCountPerSubscription__c</fullName>
    <defaultValue>350</defaultValue>
    <description>Maximum number of producers allowed per NIPR subscription</description>
    <label>Max NPN Count Per Subscription</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>