force-app/main/default/objects/d4c_NIPR_Sync_Settings__mdt/fields/d4c_SubscriptionEmail__c.field-meta.xml
<CustomField>
    <fullName>d4c_SubscriptionEmail__c</fullName>
    <description>Email address to use when creating NIPR subscriptions</description>
    <label>Subscription Email</label>
    <type>Email</type>
</CustomField>