force-app/main/default/objects/d4c_NIPR_Sync_Settings__mdt/fields/d4c_TestXMLActive__c.field-meta.xml
<CustomField>
    <fullName>d4c_TestXMLActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use test XML data instead of real API calls (debugging only)</description>
    <label>Test XML Active</label>
    <type>Checkbox</type>
</CustomField>