force-app/main/default/objects/d4c_NIPR_Sync_Settings__mdt/fields/d4c_TestXMLData__c.field-meta.xml
<CustomField>
    <fullName>d4c_TestXMLData__c</fullName>
    <description>Test XML response data for PDB Alerts (debugging only)</description>
    <label>Test XML Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>